
DISTRIBUTION
    Added: Support for MariaDB server 10.3 (all distributions)
    Added: Support for Ubuntu Bionic Beaver (18.04) LTS
    Added: PHP 7.2 as PHP alternative (Only selectable for the clients) -- See the errata file for further details

FRONTEND
    Fixed: Closing button being removed in all dialog UI while it must be removed only in alert and confirmation dialogs

INSTALLER
    Fixed: 'CLIENT_DOMAIN_ALT_URLS' configuration parameter reseted to 0 (disabled) while running installer (Fix backported from 1.6.x branch)
    Fixed: 'CLIENT_DOMAIN_ALT_URLS' parameter is not set on fresh installations (Fix backported from 1.6.x branch)
    Fixed: DIRMNGR(8) daemon not being terminated when expected (APT key management -- Debian adapter; Fix backported from 1.6.x branch)

PACKAGES
    Removed: Net2ftp package. See the errata file for further explanation.

TOOLS
    Backported: imscp-get-master-sql-user-pwd.pl script from 1.6.x branch (Script that make possible to retrieve i-MSCP master SQL user and password)

YOUTRACK
    IP-1745 Rsyslog log rotation failure -- Initctl command (Upstart) doesn't know the 'rotate' action -- Ubuntu 14.04/Trusty Thar
    IP-1751 CLIENT_DOMAIN_ALT_URLS reseted
    IP-1785 Exception in circular email feature (admin and reseller interfaces)
    IP-1786 Customer assignment (to reseller) not showing all clients
    IP-1787 Typo in external mail feature activation
    IP-1791 Error message when calculating disk quota - Cannot start new SQL transaction on an automatic reconnect

------------------------------------------------------------------------------------------------------------------------
1.5.3
------------------------------------------------------------------------------------------------------------------------

2018-05-16: Laurent Declercq
    RELEASE i-MSCP 1.5.3

BACKEND
    Backport: Fix for #IP-1758 (Could not remove HTTPD log directory -- The immutable bit is removed too late) from 1.6.x branch