@@ -30,6 +30,8 @@ DISTRIBUTION
 
 FRONTEND
     Fixed: Closing button being removed in all dialog UI while it must be removed only in alert and confirmation dialogs
+    Fixed: $ORIGIN value is empty in Custom DNS records edit UI
+    Fixed: Prevent edition of custom DNS records which are not owned by the custom DNS feature
 
 INSTALLER
     Fixed: 'CLIENT_DOMAIN_ALT_URLS' configuration parameter reseted to 0 (disabled) while running installer (Fix backported from 1.6.x branch)
